--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/socket.io": "^3.0.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
