--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "useUnknownInCatchVariables": false
   },
   "include": ["src/**/*"]
 }
