--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/server.ts",
+    "start": "ts-node --files src/server.ts",
     "dev": "ts-node src/server.ts"
   },
   "keywords": [],
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
@@ -21,6 +23,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
-    "express": "^4.21.0"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
