--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
     "strict": true,
     "esModuleInterop": true,
     "useUnknownInCatchVariables": false
