--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "socket.io": "^4.8.0"
   }
 }
